--- a/templates/network_detail.html
+++ b/templates/network_detail.html
@@ -281,7 +281,7 @@
                 <img src="{% static 'images/switch.png' %}" alt="Switch" width="50" height="50">
               {% endif %}
             </div>
-            <div class="device-name">{{ device.name }} {{ device.id }}
+            <div class="device-name">{{ device.name }}
                 {% if device.is_connected %}
                 <span class="checkmark">&#10004;</span>
                  {% else %}
